PN-5441: double processing for yesterday fixed